syntax = "proto3";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetAllUsers (Empty) returns (ShowUsers);  //JUST TESTING
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;  // JWT token
}

// Empty message for requests that don't need any input data
message Empty {}

// Message to show all users
message ShowUsers {
    repeated User users = 1;  // List of users
}

// User information
message User {
    string userId = 1;
    string username = 2;
}